fixes squashed mobile view < 375px

--- a/ares/styles/styles.css
+++ b/ares/styles/styles.css
@@ -2940,6 +2940,14 @@ legend {
     }
 }
 
+@media screen and (max-width: 375px) {
+    body.RootBody {
+        display: block!important;
+        background-size: auto;
+    }
+}
+
+
 /* Root Page End */
 
 /* Login and Registration Start */
